# monocypher-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
monocypher_sys/: Cargo.toml  build.rs  wrapper.h
monocypher_sys/src/: bindings.rs
src/: argon2.rs  argon2i.rs  blake2.rs  blake2b.rs  chacha20.rs  check.rs  crypto.rs  crypto_check.rs  crypto_lock.rs  crypto_sign.rs  crypto_unlock.rs  crypto_utils.rs  ed25519.rs  key_exchange.rs  lib.rs  lock.rs  poly1305.rs  sign.rs  unlock.rs  utils.rs
src/aead/: lock.rs  mod.rs  unlock.rs
src/ed25519/: incr.rs  mod.rs
src/hashing/: blake2b.rs  hchacha20.rs  mod.rs
src/password/: argon2.rs  argon2i.rs  mod.rs
src/pubkey/: check.rs  mod.rs  sign.rs
tests/: lock_unlock_tests.rs
tests/common/: mod.rs
