[package]
name = "monocypher"
version = "0.4.0"
authors = ["jes@schreiberconsulting.eu"]
description = "Bindings for the monocypher C library"
license = "ISC"
homepage = "https://schreiberconsulting.eu"
repository = "https://github.com/jan-schreib/monocypher"
keywords = ["cryptography", "security", "encryption"]
categories = ["cryptography"]

[dependencies]
libc = "0.2"
hex = "0.4"

[dependencies.monocypher-sys]
path = "./monocypher_sys"
version = "3.1.1"
