[package]
name = "monocypher"
version = "0.4.4"
authors = ["js@schreiberconsulting.eu"]
description = "Bindings for the monocypher C library"
license = "ISC"
homepage = "https://github.com/jan-schreib/monocypher-rs"
repository = "https://github.com/jan-schreib/monocypher-rs"
keywords = ["cryptography", "security", "encryption"]
categories = ["cryptography"]
edition = "2021"

[features]
default = []
ed25519 = ["monocypher-sys/ed25519"]

[dependencies]
libc = "0.2"
hex = "0.4"

[dependencies.monocypher-sys]
path = "./monocypher_sys"
version = "4.0.2"

[package.metadata.docs.rs]
features = ["ed25519"]
