[package]
name = "monocypher-sys"
version = "3.1.1"
authors = ["js@schreiberconsulting.eu"]
description = "Bindgen generated bindings to the monocypher C library"
homepage = "https://monocypher.org"
keywords = ["api-bindings", "cryptography"]
license = "ISC"

[features]
default = []
ed25519 = []

[build-dependencies]
bindgen = "0.56"
cc = "1.0"
