[package]
name = "monocypher-sys"
version = "4.0.2"
authors = ["js@schreiberconsulting.eu"]
description = "Bindgen generated bindings to the monocypher C library"
homepage = "https://monocypher.org"
keywords = ["api-bindings", "cryptography"]
license = "ISC"
edition = "2021"

[features]
default = []
ed25519 = []

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
